--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,12 +68,8 @@ jobs:
                 exit 1
             fi
             
-            # --- CORRECTED SED COMMAND ---
-            # This command inserts the 'command:' line immediately after the line
-            # containing 'depends_on:' within the 'nginx-proxy' service block.
-            # This is robust against secret formatting issues.
-            # The 'a\' command appends after the matched line.
-            # The indentation (12 spaces) aligns 'command:' properly under 'nginx-proxy' properties.
+            # This sed command inserts the 'command:' line precisely after the 'depends_on:' block of nginx-proxy.
+            # It's robust against secret formatting issues.
             sed -i '/nginx-proxy:/,/depends_on:/s/depends_on:/depends_on:\n            command: ["nginx", "-g", "daemon off;"]/' docker-compose.prod.yml
             
             # --- DEBUGGING: SHOW EXACT DOCKER-COMPOSE.PROD.YML CONTENT ---
@@ -84,8 +80,9 @@ jobs:
             echo "--- Final docker-compose.prod.yml content (human readable) ---"
             cat docker-compose.prod.yml # Display the final docker-compose file content for verification
 
-            echo "--- Writing nginx.conf from secret ---"
-            printf "%s" "${{ secrets.NGINX_CONF_FILE }}" > nginx.conf
+            echo "--- Writing nginx.conf from secret (Base64 Decoded) ---"
+            # This line decodes the Base64 secret and writes it to nginx.conf
+            echo "${{ secrets.NGINX_CONF_FILE }}" | base64 -d > nginx.conf
             if [ ! -s nginx.conf ]; then
                 echo "ERROR: nginx.conf was not created or is empty. Check NGINX_CONF_FILE secret."
                 exit 1
