--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -1,17 +1,24 @@
+upstream backend {
+    server backend:8080;
+}
+
+upstream frontend {
+    server frontend:4200;
+}
+
 server {
     listen 80;
-    server_name localhost;
 
-    location / {
-        proxy_pass http://app-frontend-1:80;
+    location /api {
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/ {
-        proxy_pass http://suppstore-backend:8080/;
+    location / {
+        proxy_pass http://frontend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
