--- a/angular-frontend/Dockerfile
+++ b/angular-frontend/Dockerfile
@@ -1,4 +1,5 @@
 # File: angular-frontend/Dockerfile
+# Action: CORRECTED
 
 # --- Stage 1: Build the Angular application ---
 FROM node:20-alpine as build
@@ -6,28 +7,19 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-
-# THIS IS THE CORRECTED LINE:
-# We add '-- --configuration production' to tell Angular to use environment.prod.ts
+# Use the production configuration for the build
 RUN npm run build -- --configuration production
-
 
 # --- Stage 2: Serve the application with Nginx ---
 FROM nginx:stable-alpine
 
-# This path appears correct for your project named 'primebox'
+# Copy the built Angular app to Nginx's web root
+# The path /app/dist/primebox/browser should match your angular.json output path
 COPY --from=build /app/dist/primebox/browser /usr/share/nginx/html
 
-# This Nginx configuration is correct for a single-page application.
-# It ensures that refreshing the browser on different routes (e.g., /products/123) works.
-RUN printf 'server {\n' > /etc/nginx/conf.d/default.conf && \
-    printf '\tlisten 80;\n' >> /etc/nginx/conf.d/default.conf && \
-    printf '\troot /usr/share/nginx/html;\n' >> /etc/nginx/conf.d/default.conf && \
-    printf '\tindex index.html;\n' >> /etc/nginx/conf.d/default.conf && \
-    printf '\tlocation / {\n' >> /etc/nginx/conf.d/default.conf && \
-    printf '\t\ttry_files $uri /index.html;\n' >> /etc/nginx/conf.d/default.conf && \
-    printf '\t}\n' >> /etc/nginx/conf.d/default.conf && \
-    printf '}\n' >> /etc/nginx/conf.d/default.conf
+# Copy a dedicated Nginx config file instead of using shell commands
+# This config ensures that all routes are directed to index.html for a Single Page Application (SPA)
+COPY nginx.default.conf /etc/nginx/conf.d/default.conf
 
-# Expose Nginxs port
+# Expose Nginx's default port
 EXPOSE 80
