--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+# File: docker-compose.prod.yml (in project root)
+# Action: CORRECTED & IMPROVED
+
 version: '3.8'
 services:
   database:
@@ -11,13 +14,19 @@ services:
       MYSQL_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "${SPRING_DATASOURCE_USERNAME}", "-p${SPRING_DATASOURCE_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     image: ahmhi003/suppstore-backend:${IMAGE_TAG:-latest}
     container_name: suppstore-backend
     restart: always
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
@@ -25,20 +34,22 @@ services:
 
   frontend:
     image: ahmhi003/suppstore-frontend:${IMAGE_TAG:-latest}
-    container_name: app-frontend-1
+    container_name: app-frontend
     restart: always
 
   nginx-proxy:
     image: nginx:alpine
-    container_name: app-nginx-proxy-1
+    container_name: app-nginx-proxy
+    restart: always
     ports:
       - "80:80"
     volumes:
+      # Mounts the root nginx.conf to the proxy container
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
       - backend
-    command: ["nginx", "-g", "daemon off;"] # <--- NOW INCLUDED DIRECTLY IN THIS FILE
+    command: ["nginx", "-g", "daemon off;"]
 
 volumes:
   db-data:
