--- a/angular-frontend/nginx.default.conf
+++ b/angular-frontend/nginx.default.conf
@@ -1,14 +1,11 @@
 # File: angular-frontend/nginx.default.conf
-# Action: NEW
 
 server {
     listen 80;
     root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    index  index.html;
 
     location / {
-        # This is the key for Single Page Applications (SPAs):
-        # It tries to find the file requested by the URI, otherwise falls back to index.html
         try_files $uri $uri/ /index.html;
     }
 }
