--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -1,21 +1,16 @@
-# File: nginx.conf (in project root)
-# Action: NEW - Extracted from incorrect location
+# File: nginx.conf
 
-# Define upstream servers for backend and frontend services
 upstream backend {
     server backend:8080;
 }
 
 upstream frontend {
-    # The frontend container serves content on port 80
     server frontend:80;
 }
 
 server {
     listen 80;
-    server_name your_domain.com; # Optional: Add your domain name
 
-    # Route all API calls to the Spring Boot backend
     location /api {
         proxy_pass http://backend;
         proxy_set_header Host $host;
@@ -24,7 +19,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Route all other traffic to the Angular frontend
     location / {
         proxy_pass http://frontend;
         proxy_set_header Host $host;
