--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,26 +49,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: List files for verification
-        run: ls -lR
-        # This step helps you debug by showing all files in your project.
-
-      - name: Copy configuration files to EC2
-        uses: appleboy/scp-action@master
+      - name: Deploy to EC2 using rsync
+        uses: easingthemes/ssh-deploy@v5.0.0
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "docker-compose.prod.yml,nginx.conf"
-          target: "/home/ubuntu/app"
+          # SSH connection details
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_USER: ${{ secrets.EC2_USERNAME }}
 
-      - name: Execute deployment on EC2
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script: |
+          # Files to copy from the repository root to the server
+          SOURCE: "docker-compose.prod.yml,nginx.conf"
+          TARGET: "/home/ubuntu/app"
+
+          # Script to run on the server AFTER the files are copied
+          SCRIPT_AFTER: |
             set -e
             cd /home/ubuntu/app
             
