--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,5 +1,3 @@
-# File: docker-compose.prod.yml
-
 version: '3.8'
 services:
   database:
@@ -13,41 +11,28 @@ services:
       MYSQL_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "${SPRING_DATASOURCE_USERNAME}", "-p${SPRING_DATASOURCE_PASSWORD}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
     image: ahmhi003/suppstore-backend:${IMAGE_TAG:-latest}
     container_name: suppstore-backend
     restart: always
-    depends_on:
-      database:
-        condition: service_healthy
+    depends_on: [database]
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
-
   frontend:
     image: ahmhi003/suppstore-frontend:${IMAGE_TAG:-latest}
     container_name: app-frontend
     restart: always
-
   nginx-proxy:
     image: nginx:alpine
     container_name: app-nginx-proxy
     restart: always
     ports:
-      - "80:80"
+      - "127.0.0.1:80:80" # IMPORTANT: Bind to localhost only
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - frontend
-      - backend
+    depends_on: [frontend, backend]
     command: ["nginx", "-g", "daemon off;"]
-
 volumes:
   db-data:
